--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ img {
 }
 img:hover {
     opacity: 0.5;
+    transform: scale(1.10, 1.10);
 }
 
 
@@ -23,10 +24,14 @@ button {
     border: none;
 }
 
-button:hoer {
-    border-radius: 30%;
-    background-color: grey;
-   
+p {
+    margin-top: 40px;
+    font-size: small;
+    text-align: center;
+}
+.scores {
+    display: flex;
+    justify-content: space-evenly;
 }
 
 
